welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:19: error: not found: value ch
    var y = ch.toInt(decalage)
            ^Array2:22: error: not found: value y
    Brosse(T(k+y)) ; avance()
               ^